--- a/TicketReservation System/Reservation System/Reservation System.csproj
+++ b/TicketReservation System/Reservation System/Reservation System.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.21" />
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
