--- a/TicketReservation System/Reservation System/appsettings.json
+++ b/TicketReservation System/Reservation System/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "CollectionName": "users",
+    "TravelerCollectionName": "travelers",
     "DatabaseName": "user_management",
     "Connection": "mongodb+srv://it19208022:FbJX5ZNT3nKUoOZg@reservation-system.jpzjsb7.mongodb.net/?retryWrites=true&w=majority"
   },
